--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,7 +12,7 @@
 
 - name: apt-get update
   apt:
-    update_cache: yes
+    cache_valid_time: 86400
   when:
     - not uninstall
     - ansible_os_family == "Debian"
@@ -62,17 +62,6 @@
 
 - name: Setup packages.microsoft.com repository.
   include_tasks: repository.yml
-
-- name: apt-get update
-  apt:
-    update_cache: yes
-  when:
-    - not uninstall
-    - ansible_os_family == "Debian"
-  tags:
-    - install
-    - dependencies
-
 
 - name: Unzip the onboarding package from Microsoft Defender Security Center.
   include_tasks: onboarding_setup.yml
